# ml-system-design

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: ml_system_design_doc.md
notebooks/: EDA.ipynb
